# DiagonalizationSpins

./: ArmaD.cc  CMakeLists.txt  Heisemberg.cc  INIMacro  LER.cc  MCSpin_simple.cc  ThoTimeCal.cc  Thouless.cc  aveNcol.cc  fit.gnu
src/: myTGraph.cc
